# CMakeMircrosoftRPC

./: .gitignore  README.md
examples/Microsoft Hello World/: CMakeLists.txt
examples/Microsoft Hello World/Client/: helloc.c
examples/Microsoft Hello World/Server/: hellop.c  hellos.c
examples/Microsoft Hello World/cmake/: MircrosoftRPC.cmake
